上传文件portlet, 当文件名同名的时候更新文件，不同名的时候是增加文件

--- a/Demo3-portlet/docroot/WEB-INF/web.xml
+++ b/Demo3-portlet/docroot/WEB-INF/web.xml
@@ -15,4 +15,15 @@
 		</taglib>
 	</jsp-config>
 	
+	
+<!-- 	<servlet>
+		<servlet-name>MyWebDAVServlet</servlet-name>
+		<servlet-class>com.test.MyWebDAVServlet</servlet-class>
+		 <load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MyWebDAVServlet</servlet-name>
+		<url-pattern>/download</url-pattern>
+	</servlet-mapping> -->
+	
 </web-app>
