--- a/Oauth2-portlet/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/Oauth2-portlet/docroot/WEB-INF/liferay-plugin-package.properties
@@ -7,5 +7,8 @@ change-log=
 page-url=http://www.liferay.com
 author=Liferay, Inc.
 licenses=LGPL
+portal-dependency-jars=\
+    jstl-api.jar,\
+    jstl-impl.jar
 long-description=portal-dependency-jars=spring-aop.jar,spring-asm.jar,spring-aspects.jar,spring-beans.jar,spring-context-support.jar,spring-context.jar,spring-core.jar,spring-expression.jar,spring-jdbc.jar,spring-jms.jar,spring-orm.jar,spring-oxm.jar,spring-transaction.jar,spring-web-portlet.jar,spring-web-servlet.jar,spring-web-struts.jar,spring-web.jar,jstl-api.jar,jstl-impl.jar,slf4j-api.jar,commons-codec.jar
 liferay-versions=6.2.0+
